Final AULA 06 Melhorando a navegação com menus

--- a/livraria/WebContent/WEB-INF/web.xml
+++ b/livraria/WebContent/WEB-INF/web.xml
@@ -21,5 +21,10 @@
 	        true
 	    </param-value>
 	</context-param>
+	
+	<context-param>
+    <param-name>javax.faces.FACELETS_SKIP_COMMENTS</param-name>
+    <param-value>true</param-value>
+</context-param>
 	  
 </web-app>
