--- a/livraria/WebContent/WEB-INF/web.xml
+++ b/livraria/WebContent/WEB-INF/web.xml
@@ -23,8 +23,13 @@
 	</context-param>
 	
 	<context-param>
-    <param-name>javax.faces.FACELETS_SKIP_COMMENTS</param-name>
-    <param-value>true</param-value>
-</context-param>
+    	<param-name>javax.faces.FACELETS_SKIP_COMMENTS</param-name>
+    	<param-value>true</param-value>
+	</context-param>
+	
+	<context-param>
+		<param-name>primefaces.THEME</param-name>
+		<param-value>#{temaBean.tema}</param-value>
+	</context-param>
 	  
 </web-app>
