--- a/livraria/WebContent/WEB-INF/web.xml
+++ b/livraria/WebContent/WEB-INF/web.xml
@@ -12,6 +12,10 @@
 	    <servlet-name>Faces Servlet</servlet-name>
 		<url-pattern>*.xhtml</url-pattern>
 	</servlet-mapping>
+	
+	<welcome-file-list>
+		<welcome-file>livro.xhtml</welcome-file>
+	</welcome-file-list>	
   
 	<context-param>
 	    <param-name>
