--- a/casadocodigo/WebContent/WEB-INF/web.xml
+++ b/casadocodigo/WebContent/WEB-INF/web.xml
@@ -14,6 +14,11 @@
 		<url-pattern>*.xhtml</url-pattern>
 	</servlet-mapping>
 
+	<context-param>
+		<param-name>org.omnifaces.CACHE_SETTINGS_APPLICATION_TTL</param-name>
+		<param-value>900</param-value>
+	</context-param>
+
 	<welcome-file-list>
 		<welcome-file>index.xhtml</welcome-file>
 	</welcome-file-list>
